# todo-txt-rs

./: Cargo.toml  LICENSE  Readme.md
cli/: Cargo.toml  Readme.md
cli/src/: commands.rs  main.rs
cli/src/commands/: add.rs  append.rs  delete.rs  done.rs  list.rs  priority.rs  replace.rs
lazy/: Cargo.toml
lazy/src/: app.rs  main.rs
lazy/src/windows/: main_window.rs
manager/: Cargo.toml
manager/src/: commands.rs  lib.rs
manager/src/commands/: add.rs  append.rs  delete.rs  done.rs  list.rs  priority.rs  replace.rs
model/: Cargo.toml
model/src/: error.rs  lib.rs
serializer/: Cargo.toml
serializer/src/: de.rs  lib.rs  ser.rs
serializer/tests/: serializer_tests.rs
