[package]
name = "todo-txt-serializer"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
todo-txt-model = { workspace = true }
